[gd_scene load_steps=5 format=2]

[ext_resource path="res://M2.png" type="Texture" id=1]
[ext_resource path="res://terminals.tres" type="DynamicFont" id=2]
[ext_resource path="res://TerminalManager.gd" type="Script" id=3]
[ext_resource path="res://Background.tscn" type="PackedScene" id=4]

[node name="Previewer" type="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 396.0
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scale" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 20.0
alignment = 1

[node name="Prev" type="Button" parent="Scale"]
margin_left = 463.0
margin_right = 491.0
margin_bottom = 20.0
text = "<="

[node name="Terminals" type="Label" parent="Scale"]
margin_left = 495.0
margin_top = 3.0
margin_right = 528.0
margin_bottom = 17.0
text = "Scale"

[node name="Next" type="Button" parent="Scale"]
margin_left = 532.0
margin_right = 560.0
margin_bottom = 20.0
text = "=>"

[node name="Navigation2" type="HBoxContainer" parent="."]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
alignment = 1

[node name="Prev" type="Button" parent="Navigation2"]
margin_left = 448.0
margin_right = 476.0
margin_bottom = 20.0
text = "<="

[node name="Terminals" type="Label" parent="Navigation2"]
margin_left = 480.0
margin_top = 3.0
margin_right = 543.0
margin_bottom = 17.0
text = "Terminals"

[node name="Next" type="Button" parent="Navigation2"]
margin_left = 547.0
margin_right = 575.0
margin_bottom = 20.0
text = "=>"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 354.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scene Root" parent="CenterContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 156.0
margin_right = 867.0
margin_bottom = 306.0
rect_min_size = Vector2( 711, 306 )

[node name="PICT" type="GridContainer" parent="CenterContainer"]
margin_left = 156.0
margin_right = 867.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 306 )
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 2

[node name="Texture" type="TextureRect" parent="CenterContainer/PICT"]
margin_top = 20.0
margin_right = 307.0
margin_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 1 )
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PICT"]
margin_left = 311.0
margin_right = 711.0
margin_bottom = 306.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty" type="Label" parent="CenterContainer/PICT/VBoxContainer"]
margin_right = 400.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="Terminal" type="RichTextLabel" parent="CenterContainer/PICT/VBoxContainer"]
margin_top = 20.0
margin_right = 400.0
margin_bottom = 286.0
rect_min_size = Vector2( 400, 207 )
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true

[node name="Empty2" type="Label" parent="CenterContainer/PICT/VBoxContainer"]
margin_top = 290.0
margin_right = 400.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 16 )

[node name="Information" type="HBoxContainer" parent="."]
margin_top = 358.0
margin_right = 1024.0
margin_bottom = 372.0
alignment = 1

[node name="Terminals" type="Label" parent="Information"]
margin_left = 444.0
margin_right = 523.0
margin_bottom = 14.0
text = "Terminals: 0"

[node name="Pages" type="Label" parent="Information"]
margin_left = 527.0
margin_right = 580.0
margin_bottom = 14.0
text = "Pages: 0"

[node name="Navigation" type="HBoxContainer" parent="."]
margin_top = 376.0
margin_right = 1024.0
margin_bottom = 396.0
alignment = 1

[node name="Prev" type="Button" parent="Navigation"]
margin_left = 461.0
margin_right = 489.0
margin_bottom = 20.0
text = "<="

[node name="Pages" type="Label" parent="Navigation"]
margin_left = 493.0
margin_top = 3.0
margin_right = 530.0
margin_bottom = 17.0
text = "Pages"

[node name="Next" type="Button" parent="Navigation"]
margin_left = 534.0
margin_right = 562.0
margin_bottom = 20.0
text = "=>"
[connection signal="pressed" from="Scale/Prev" to="." method="_on_Prev_scale_pressed"]
[connection signal="pressed" from="Scale/Next" to="." method="_on_Next_scale_pressed"]
[connection signal="pressed" from="Navigation2/Prev" to="." method="_on_Prev_term_pressed"]
[connection signal="pressed" from="Navigation2/Next" to="." method="_on_Next_term_pressed"]
[connection signal="pressed" from="Navigation/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Navigation/Next" to="." method="_on_Next_pressed"]
